# erp-wallet

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
app/: config.py
app/entrypoint/: api_client.py  database.py  factories.py  models.py  repositories.py  utils.py
app/entrypoint/api/: dependencies.py  main.py  schemas.py
app/entrypoint/api/routers/: cashback.py
scripts/: setup.py
tests/: cashback_test.py  conftest.py  data.py  schemas_test.py
